# SnapLite

./: .gitignore  CMakeLists.txt  README.md  build_run.cmd
src/: main.cpp
src/data/: VolumeData.cpp  VolumeData.h
src/rendering/: VolumeRenderPlaceholder.cpp  VolumeRenderPlaceholder.h
src/ui/: MainWindow.cpp  MainWindow.h  SliceView.cpp  SliceView.h
